--- a/style/style.css
+++ b/style/style.css
@@ -45,7 +45,7 @@ a{
 }
 .main_body_frame{
     display: grid;
-    grid-template-columns: 150px 1fr;
+    grid-template-columns: 150px 900px 1fr ;
 }
 @media(max-width : 600px){
     .main_body_frame{
