--- a/style/style.css
+++ b/style/style.css
@@ -49,7 +49,7 @@ a{
 }
 @media(max-width : 600px){
     .main_body_frame{
-    grid-template-columns: 100px 1fr;
+    grid-template-columns: 100px 1fr 1fr;
     }
 }
 .buttons{
